# porcupine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Package.swift  README.md  TODO-REMOVE.TXT  __init__.py  _porcupine.py  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-speed-test.yml  android-upload.yml  android.yml  angular-codestyle.yml  angular-demos.yml  angular-stt-demos.yml  angular.yml  c-codestyle.yml  c-demos.yml  c-helper.yml  dotnet-codestyle.yml  dotnet-demos.yml  dotnet-vui-demos.yml  dotnet.yml  flutter-codestyle.yml  flutter-demos.yml  flutter.yml  go-codestyle.yml  go-demos.yml  go.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  java-codestyle.yml  java-demos.yml  java-perf.yml  java.yml  js-codestyle.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs-perf.yml  (+29 more)
binding/: .gitignore  README.md
binding/android/: README.md  build.gradle  settings.gradle
binding/angular/: .eslintignore  .eslintrc.json  .gitignore  README.md  angular.json  cypress.config.ts  package.json  tsconfig.json  tslint.json
binding/dotnet/: .editorconfig  .gitignore  Porcupine.sln  PorcupineCS.sln  PorcupineDotNet.sln  README.md
binding/flutter/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  copy_libs.sh  copy_resources.sh  pubspec.yaml
binding/go/: README.md  copy.sh  go.mod  porcupine.go  porcupine_native.go  porcupine_posix.go  porcupine_test.go  porcupine_unix.go  porcupine_windows.go
binding/ios/: Porcupine-iOS.podspec  Porcupine.swift  PorcupineErrors.swift  PorcupineManager.swift  README.md
binding/java/: .gitignore  README.md  build.gradle  publish-mavencentral.gradle  settings.gradle
binding/javascript/: README.md  porcupine.js
binding/js/: README.md  porcupine.js
binding/nodejs/: .eslintignore  .eslintrc.js  .gitignore  README.md  builtin_keywords.js  copy.js  errors.js  index.js  index.test.js  package-lock.json  package.json  platforms.js  pv_status_t.js  tsconfig.json  wave_util.js
binding/python/: .gitignore  README.md  __init__.py  _factory.py  _porcupine.py  _util.py  porcupine.py  porcupine_error.py  requirements.txt  setup.py  test_porcupine.py  test_porcupine_perf.py  test_porcupine_train.py  test_util.py  test_utils.py  util.py
binding/react/: .eslintignore  .eslintrc.js  .gitignore  .npmignore  README.md  cypress.config.ts  package.json  rollup.config.js  tsconfig.json  vite.config.js
binding/react-native/: .editorconfig  .gitignore  .npmignore  README.md  copy.js  package.json  porcupine-react-native.podspec  react-native-porcupine.podspec  tsconfig.json
binding/rust/: .gitignore  Cargo.toml  README.md  build.rs  copy.sh
binding/rust/src/: lib.rs  porcupine.rs  util.rs
binding/rust/tests/: porcupine_tests.rs
binding/unity/: .gitignore  Porcupine.cs  README.md  copy.sh  copy_test_resources.sh  porcupine-1.9.7.unitypackage  porcupine-2.1.1-Apple-silicon.unitypackage  porcupine-2.1.1.unitypackage  (+13 more)
demo/: README.md
demo/c/: .gitignore  CMakeLists.txt  Preload.CMake  README.md  porcupine_demo_file.c  porcupine_demo_mic  porcupine_demo_mic.c  test_demo.py
demo/c/test/: test_porcupine_c.py  test_util.py
include/: picovoice.h  pv_porcupine.h  pv_porcupine_mcu.h
lib/: README.md
resources/: porcupine.data  porcupine.data.0.REMOVED.git-id  porcupine.data.1.REMOVED.git-id  porcupine.data.10.REMOVED.git-id  porcupine.data.11.REMOVED.git-id  porcupine.data.2.REMOVED.git-id  porcupine.data.3.REMOVED.git-id  porcupine.data.4.REMOVED.git-id  porcupine.data.5.REMOVED.git-id  porcupine.data.6.REMOVED.git-id  porcupine.data.7.REMOVED.git-id  porcupine.data.8.REMOVED.git-id  porcupine.data.9.REMOVED.git-id  porcupine.data.REMOVED.git-id  porcupine_tiny.data.0.REMOVED.git-id  porcupine_tiny.data.1.REMOVED.git-id  porcupine_tiny.data.10.REMOVED.git-id  porcupine_tiny.data.11.REMOVED.git-id  porcupine_tiny.data.2.REMOVED.git-id  porcupine_tiny.data.3.REMOVED.git-id  porcupine_tiny.data.4.REMOVED.git-id  porcupine_tiny.data.5.REMOVED.git-id  porcupine_tiny.data.6.REMOVED.git-id  porcupine_tiny.data.7.REMOVED.git-id  porcupine_tiny.data.8.REMOVED.git-id  porcupine_tiny.data.9.REMOVED.git-id
(+3506 files in other folders)
